solve uneven result li els issue - change small portrait screen result positioning

--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   text-align: center;
   font-weight: bold;
   list-style: none;
@@ -228,7 +229,7 @@ h1 {
     margin: 0 15px;
     align-items: flex-start;
     justify-content: space-around;
-    max-width: 80vw;
+    max-width: 90vw;
   }
 
   .slot {
@@ -238,8 +239,9 @@ h1 {
     width: 100%;
   }
 
-  .slot li {
+  .slot li:not(:first-of-type) {
     margin: 10px 0;
+    width: 25%;
   }
 
   .instructions {
@@ -288,8 +290,9 @@ h1 {
     width: 100%;
   }
 
-  .slot li {
+  .slot li:not(:first-of-type) {
     margin: 10px 0;
+    width: 25%;
   }
 
   .instructions {
